Set up final Bill and CheckOut pages. Close full portal flow

--- a/frontend/src/i18n/es.json
+++ b/frontend/src/i18n/es.json
@@ -10,6 +10,11 @@
     "totalMovies": "Total películas",
     "totalNights": "Total noches",
     "totalAmount": "TOTAL",
-    "noGuest": "No hay huésped activo"
+    "noGuest": "No hay huésped activo",
+    "checkOut": "Check Out",
+    "confirmCheckOut": "¿Desea confirmar el check-out y generar la factura?",
+    "yes": "Sí",
+    "no": "No",
+    "exit": "Salir"
   }
 }
